--- a/package.json
+++ b/package.json
@@ -18,35 +18,35 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.12.10",
-    "@storybook/addon-a11y": "^6.1.11",
-    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-a11y": "^6.1.15",
+    "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-console": "^1.2.2",
-    "@storybook/addon-controls": "6.1.11",
-    "@storybook/addon-docs": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/addon-viewport": "^6.1.11",
-    "@storybook/addons": "^6.1.11",
+    "@storybook/addon-controls": "6.1.15",
+    "@storybook/addon-docs": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/addon-viewport": "^6.1.15",
+    "@storybook/addons": "^6.1.15",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.11",
+    "@storybook/react": "^6.1.15",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/user-event": "^12.6.2",
     "axios-mock-adapter": "^1.19.0",
     "canvas": "2.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.6.5",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-testing-library": "^3.10.1",
-    "husky": "^4.3.5",
+    "husky": "^4.3.8",
     "immutable": "^3.8.2",
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.5.2",
-    "msw": "^0.25.0",
+    "lint-staged": "^10.5.3",
+    "msw": "^0.26.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
@@ -56,7 +56,7 @@
     "react-test-renderer": "^16.14.0",
     "replace-in-file": "^6.1.0",
     "serve": "^11.3.2",
-    "source-map-explorer": "^2.5.1",
+    "source-map-explorer": "^2.5.2",
     "workbox-build": "^5.1.4"
   },
   "husky": {
@@ -73,22 +73,22 @@
     ]
   },
   "dependencies": {
-    "@sentry/browser": "^5.29.0",
+    "@sentry/browser": "^6.0.3",
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
-    "d3-array": "^2.8.0",
-    "d3-axis": "^1.0.12",
-    "d3-format": "^1.4.5",
+    "d3-array": "^2.11.0",
+    "d3-axis": "^2.0.0",
+    "d3-format": "^2.0.0",
     "d3-interpolate-path": "^2.2.1",
     "d3-scale": "^3.2.3",
-    "d3-selection": "^1.4.2",
-    "d3-shape": "^1.3.7",
-    "d3-time-format": "^2.3.0",
-    "d3-transition": "^1.3.2",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.0.0",
+    "d3-time-format": "^3.0.0",
+    "d3-transition": "^2.0.0",
     "draft-js": "^0.11.7",
     "history": "^4.10.1",
     "html2canvas": "^1.0.0-rc.7",
-    "rc-slider": "^9.6.5",
+    "rc-slider": "^9.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^3.3.0",
@@ -100,8 +100,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regression": "^2.0.1",
-    "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "2.0.1"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
