--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.27",
+  "version": "5.1.28",
   "main": "index.js",
   "private": true,
   "author": {
@@ -82,6 +82,7 @@
     "draft-js": "^0.11.7",
     "history": "^4.10.1",
     "html2canvas": "^1.0.0-rc.7",
+    "mdx.macro": "^0.2.9",
     "rc-slider": "^9.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -117,7 +118,7 @@
     "test:no-watch": "npm run test -- --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
     "test:coverage": "npm run test:no-watch -- --coverage",
-    "serve": "serve -s build",
+    "serve-build": "serve -s build -l 9000",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
