--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.28",
+  "version": "5.1.30",
   "main": "index.js",
   "private": true,
   "author": {
@@ -67,7 +67,7 @@
     ]
   },
   "dependencies": {
-    "@sentry/browser": "^6.1.0",
+    "@sentry/browser": "^6.2.0",
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
     "d3-array": "^2.11.0",
@@ -80,6 +80,7 @@
     "d3-time-format": "^3.0.0",
     "d3-transition": "^2.0.0",
     "draft-js": "^0.11.7",
+    "glur": "^1.1.2",
     "history": "^4.10.1",
     "html2canvas": "^1.0.0-rc.7",
     "mdx.macro": "^0.2.9",
