--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.34",
+  "version": "5.1.35",
   "main": "index.js",
   "private": true,
   "author": {
@@ -51,7 +51,7 @@
     "pixelmatch": "^5.2.1",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "4.0.3",
     "react-test-renderer": "^16.14.0",
     "replace-in-file": "^6.2.0",
     "serve": "^11.3.2",
